<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_grey"
    tools:context=".Activity.SlideActivity"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvCreateAccount"
        style="@style/Textview"
        android:textSize="@dimen/sp_18"
        android:text="@string/create_and_account" />

    <androidx.viewpager.widget.ViewPager
        android:layout_weight="1"
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/btnLoginWithGoogle"
        style="@style/ButtonHomeLayout"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_login" />

    <RelativeLayout
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_marginStart="50dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvOrUse"
            style="@style/ImageView"
            android:textColor="@color/gery_light"
            android:layout_gravity="center"
            android:text="@string/or_use" />

        <Button
            android:layout_toEndOf="@id/tvOrUse"
            android:layout_marginStart="10dp"
            android:id="@+id/btnPhoneNumber"
            style="@style/ButtonHomeActi"
            android:text="@string/phone_number" />

        <TextView
            android:layout_toEndOf="@+id/btnPhoneNumber"
            android:id="@+id/tvOr"
            style="@style/ImageView"
            android:textColor="@color/gery_light"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/or" />

        <Button
            android:layout_toEndOf="@+id/tvOr"
            android:id="@+id/btnFacebook"
            style="@style/ButtonHomeActi"
            android:text="@string/facebook" />
    </RelativeLayout>


</LinearLayout>




