<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <RelativeLayout
        android:id="@+id/rlHead"
        android:padding="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
   <TextView
       android:id="@+id/tvSelectMusic"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/music"
       android:clickable="true"
       android:visibility="visible"
       android:layout_marginTop="@dimen/dp_25"
       android:layout_marginStart="@dimen/dp_20"
       android:layout_marginLeft="@dimen/dp_20"
       android:textSize="@dimen/sp_25"
       android:textColor="@color/black"
       android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvSelectMusicBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"
            android:clickable="true"
            android:visibility="invisible"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/grey"
            android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvSelectPodcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_toEndOf="@id/tvSelectMusic"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_25"
        android:text="@string/podcasts"
        android:visibility="invisible"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_toRightOf="@id/tvSelectMusic" />
        <TextView
            android:id="@+id/tvSelectPodcastBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_toEndOf="@id/tvSelectMusic"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_32"
            android:text="@string/podcasts"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:layout_toRightOf="@id/tvSelectMusic" />

    <Button
        android:id="@+id/btnGoPro"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_toEndOf="@id/tvSelectPodcast"
        android:layout_marginTop="@dimen/dp_22"
        android:background="@drawable/oval_button"
        android:text="@string/go_pro_"
        android:layout_marginLeft="@dimen/dp_60"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"

        android:layout_toRightOf="@id/tvSelectPodcast" />
    </RelativeLayout>

<FrameLayout
    android:id="@+id/flHomeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/rlHead"/>


</RelativeLayout>